--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-filechooser": "1.2.0",
     "cordova-plugin-filepath": "1.5.1",
+    "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "firebase": "^5.9.3",
     "rxjs": "~6.3.3",
@@ -67,7 +68,8 @@
     "plugins": {
       "cordova-plugin-filechooser": {},
       "cordova-plugin-filepath": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
